<resources>
    <string name="app_name">My Shop</string>
    <string name="new_products">تازه ها</string>
    <string name="most_viewed">پر بازدید</string>
    <string name="favorite_products">محبوب</string>
    <string name="category">دسته بندی</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="Home">خانه</string>
    <string name="shopping_cart">سبد خرید</string>
    <string name="profile">پروفایل</string>
    <string name="mostViewed">محصولات پر بازدید</string>
    <string name="TopRated">بالاترین امتیاز</string>
    <string name="New">محصولات جدید</string>
    <string name="category_image">Category Image</string>
    <string name="Description">توضیحات</string>
    <string name="product_description_tag">product Description</string>
    <string name="product_image">product Image</string>
    <string name="price">قیمت</string>
    <string name="update_cart">به روز کردن</string>
    <string name="number">تعداد</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Cart">سبد خرید</string>
    <string name="total_cart_value">مجموع قیمت سبد</string>
    <string name="continue_shopping_process">ادامه فرآیند خرید</string>
    <string name="cart_item_photo">cart item photo</string>
    <string name="guarantee">گارانتی اصالت و سلامت</string>
    <string name="search_hint">جست و جوی محصول</string>
    <string name="special_products">محصولات ویژه</string>
    <string name="popular_products">محصولات محبوب</string>
    <string name="most_viewed_products">محصولات پربازدید</string>
    <string name="special_product">عکس کالای ویژه</string>
    <string name="email_for_sign_up">ایمیل جهت ثبت نام</string>
    <string name="check_mail_button">چک کردن ایمیل</string>
    <string name="sign_up_hint">به منظور چک کردن وجود اکانت با ایمیل وارد شده دکمه چک کردن ایمیل را پس از اطمینان از صحت ایمیلتان بزنید. در صورت داشتن اکانت دکمه ورود را در پایین فشرده تا وارد بخش ورود شوید.</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="phone_number">شماره تماس</string>
    <string name="show_product_list">نمایش لیست محصولات</string>

    <string-array name="sortMethod">
        <item>----</item>
        <item>جدیدترین</item>
        <item>قیمت</item>
        <item>پرفروشترین</item>
    </string-array>

    <string-array name="sortOrder">
        <item>نزولی</item>
        <item>صعودی</item>
    </string-array>
</resources>