<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/Home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/categories"
        android:enabled="true"
        android:icon="@drawable/ic_category"
        android:title="@string/category"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cart_fragmernt"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/shopping_cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account_management_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>