<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ViewModel"
            type="com.example.myshop.viewModel.HomeFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.Fragment.HomeFragment">

        <ScrollView
            android:id="@+id/listScrollHome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#E10D0D"
                    android:text="@string/special_products"
                    android:textAlignment="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/specialProductList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#B2FF59"
                    android:text="@string/New"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/newArrivals"
                    android:layout_width="256dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/new_products"
                    android:src="@mipmap/ic_new_arrival_banner_foreground" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#FF5252"
                    android:text="@string/most_viewed_products"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/mostViewed"
                    android:layout_width="256dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/mostViewed"
                    android:src="@mipmap/trending_banner" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#7C4DFF"
                    android:text="@string/popular_products"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/topRated"
                    android:layout_width="256dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="64dp"
                    android:contentDescription="@string/favorite_products"
                    android:src="@mipmap/ic_favorites_banner_foreground" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>