<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cartItemPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/cart_item_photo"
            app:layout_constraintBottom_toBottomOf="@+id/cartItemPlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_product" />

        <TextView
            android:id="@+id/cartItemName"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/cartItemPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="cart item name" />

        <TextView
            android:id="@+id/cartItemGuarantee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/guarantee"
            app:layout_constraintStart_toStartOf="@+id/cartItemName"
            app:layout_constraintTop_toBottomOf="@+id/cartItemName" />

        <TextView
            android:id="@+id/cartItemPriceTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@+id/cartItemName"
            app:layout_constraintTop_toBottomOf="@+id/cartItemGuarantee" />

        <TextView
            android:id="@+id/cartItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/cartItemPriceTag"
            app:layout_constraintTop_toTopOf="@+id/cartItemPriceTag"
            tools:text="price" />

        <Button
            android:id="@+id/minusButtonCartItem"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemPrice" />

        <TextView
            android:id="@+id/cartItemCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/minusButtonCartItem"
            app:layout_constraintTop_toBottomOf="@+id/cartItemPrice"
            tools:text="count" />

        <Button
            android:id="@+id/cartItemPlus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cartItemCount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>